Rename showTopic to loadTopic to remove ambiguity; bug fixes
- showTopic and showTopics sounded too similar so changing showTopic
  to loadTopic should remove ambiguity
- Only clear innerHTML of .questions when loading another topic in case
  we want to come back to it later
- Hide questions with CSS when on the topics list (should have been done
  earlier but it only matters now due to second bullet point)

--- a/Styles.css
+++ b/Styles.css
@@ -89,6 +89,10 @@ body {
 .supermaths .questions {
   width: 1000px;
   margin: 0 auto;
+  display: none;
+}
+.supermaths .questions.show {
+  display: block;
 }
 
 .supermaths .question {
