--- a/Styles.css
+++ b/Styles.css
@@ -16,13 +16,19 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-html, body, .supermaths { height: 100% }
+html, body { height: 100% }
 
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   line-height: 25px;
   background-color: lightblue;
+  overflow-y: scroll;
+}
+
+.supermaths {
+  height: calc(100% - 125px);
+  padding-top: 125px;
 }
 
 .supermaths .header {
@@ -32,7 +38,9 @@ body {
   background: linear-gradient(darkslategray, black);
   color: white;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  margin-bottom: 25px;
+  position: fixed;
+  top: 0;
+  z-index: 1;
 }
 .supermaths .inner-header {
   width: 1000px;
@@ -150,17 +158,17 @@ body {
   position: relative;
   height: 25px;
 }
-.supermaths .answer.disabled::before {
+.supermaths .questions.all-done .answer.disabled::before {
   content: " ";
   width: 100%;
   height: 25px;
   position: absolute;
 }
 
-.supermaths .answer[data-state="correct"] * {
+.supermaths .questions.all-done .answer[data-state="correct"] * {
   color: lime !important;
 }
-.supermaths .answer[data-state="incorrect"] * {
+.supermaths .questions.all-done .answer[data-state="incorrect"] * {
   color: salmon !important;
 }
 .supermaths .answer[data-state="empty"] * {
@@ -176,12 +184,13 @@ body {
   vertical-align: top;
   opacity: 0;
   transition: opacity 0.1s;
+  cursor: default;
 }
 .supermaths .answer[data-state="empty"]::after {
   opacity: 1;
 }
 
-.supermaths .answer.fraction input {
+.supermaths .answer input {
   background-color: transparent;
   border: none;
   color: white;
@@ -225,7 +234,7 @@ body {
   font-family: "Roboto Slab", serif;
   display: none;
 }
-.supermaths .explanation.show {
+.supermaths .questions.all-done .explanation.show {
   display: block;
 }
 
