--- a/Styles.css
+++ b/Styles.css
@@ -31,6 +31,13 @@ body {
   padding-top: 125px;
 }
 
+.supermaths .inner-header, .supermaths .topics, .supermaths .questions {
+  max-width: 1000px;
+  min-width: 400px;
+  margin: 0 auto;
+  padding: 0 25px;
+}
+
 .supermaths .header {
   width: 100%;
   height: 50px;
@@ -43,9 +50,7 @@ body {
   z-index: 1;
 }
 .supermaths .inner-header {
-  width: 1000px;
   line-height: 50px;
-  margin: 0 auto;
   font-family: "Bungee", sans-serif;
 }
 
@@ -70,13 +75,8 @@ body {
   margin: 0 20px;
 }
 
-.supermaths .topics {
+.supermaths .topics:not(.show) {
   display: none;
-  width: 1000px;
-  margin: 0 auto;
-}
-.supermaths .topics.show {
-  display: block;
 }
 
 .supermaths .category {
@@ -99,13 +99,8 @@ body {
   background-color: lightseagreen;
 }
 
-.supermaths .questions {
-  width: 1000px;
-  margin: 0 auto;
+.supermaths .questions:not(.show) {
   display: none;
-}
-.supermaths .questions.show {
-  display: block;
 }
 
 .supermaths .question {
